--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <html lang="">
   <head>
+    <style>body{opacity: 0.0; background-color: #4d3b4d}</style>
     <meta charset="utf-8">
   </head>
   <body>
