--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <html lang="">
   <head>
     <style>body{opacity: 0.0; background-color: #4d3b4d}</style>
+    <link rel="icon" type="image/x-icon" href="assets/art/mushy-icon.webp">
+    <title>pep's topster maker!</title>
     <meta charset="utf-8">
   </head>
   <body>
