--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <button id="export-button">export!</button>
               <button id="load-button">load!</button>
               <button id="save-button">save!</button>
-              <button id="topsters2-import" disabled="true">import from topsters2! (soon)</button>
+              <button id="topsters2-import">import from topsters2!</button>
             </div>
           </div>
 
